@@ -27,6 +27,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20026: Fix the sqlite module to handle correctly invalid isolation
+  level (wrong type).
+
 - Issue #18829: csv.Dialect() now checks type for delimiter, escapechar and
   quotechar fields.  Original patch by Vajrasky Kok.
 
